Change carsoule inner to flex

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
                 <button type="button" data-bs-target="#myco" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
 
-            <div class="carousel-inner  d-flex-col">
+            <div class="carousel-inner  d-flex">
                 <div class="carousel-item active subscription">
                     <div class="new">new</div>
                     <h3 class="heading">Private Limited Company</h3>
