--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
         </div>
     </main>
     <div class="d-md-none" style="margin-top: 50px;">
-        <div id="myco" class="carousel slide carousel-fade subscription__container" data-bs-ride="carousel">
+        <div id="myco" class="carousel slide  subscription__container" data-bs-ride="carousel">
 
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#myco" data-bs-slide-to="0" class="active" aria-current="true"
